--- a/projetos/inmetro/votacao-arraia/index.html
+++ b/projetos/inmetro/votacao-arraia/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>    
     <root-voting> 
-        <splash-screen />
+        <!-- ROOT: don't use this part -->
     </root-voting>
 </body>
-<script type="module" src="./src/components/root-voting.js"></script>
+<script type="module" src="./src/root-voting.js"></script>
 <script type="module" src="./src/components/splashscreen.js"></script>
+<script type="module" src="./src/pages/home-page.js"></script>
+<script type="module" src="./src/components/button.js"></script>
+
 
 </html>
 
