new config de infra

--- a/projetos/inmetro/votacao-arraia/index.html
+++ b/projetos/inmetro/votacao-arraia/index.html
@@ -7,16 +7,9 @@
     <link rel="stylesheet" href="./public/style.css">
     <link rel="stylesheet" href="./public/font.css">
 </head>
-<body>    
-    <root-voting> 
-        <!-- ROOT: don't use this part -->
-    </root-voting>
+<body>        
 </body>
-<script type="module" src="./src/root-voting.js"></script>
-<script type="module" src="./src/components/splashscreen.js"></script>
-<script type="module" src="./src/pages/home-page.js"></script>
-<script type="module" src="./src/components/button.js"></script>
-
+<script type="module" src="./src/main.js"></script>
 
 </html>
 
