--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
     <link rel="stylesheet" href="./public/style/style.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> <!-- NORMALIZE CSS -->
 </head>
 <body>
     <!-- NÃO ALTERAR -->
