--- a/projetos/inmetro/votacao-arraia/index.html
+++ b/projetos/inmetro/votacao-arraia/index.html
@@ -6,6 +6,8 @@
     <title>Votação Arraiá</title>
     <link rel="stylesheet" href="./public/style.css">
     <link rel="stylesheet" href="./public/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
 </head>
 <body>        
 </body>
